Fixed issue with delete icons on mobile

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -4088,10 +4088,10 @@ a.github-fork {
 					display: inline-block;
 				}
 				.icons {
-					width: 23%;
+					width: 24%;
 					display: inline-block;
 					height: 48px;
-					margin-left: 10px;
+					margin-left: 5px;
 				}
 				.filename,
 				.assignment-name {
@@ -4167,7 +4167,7 @@ a.github-fork {
 				.icon-cloud-download,
 				.icon-bubble,
 				.icon-close {
-					font-size: 22px;
+					font-size: 20px;
 			    float: right;
 			    margin-right: 17px;
 			    color: #F3919D;
@@ -5683,6 +5683,14 @@ a.github-fork {
 					.date {
 						font-size: 14px;
 					}
+					.icons {
+						width: 30%;
+						margin-left: -30px;
+						i {
+							font-size: 18px;
+							margin-right: 15px;
+						}
+					}
 				}
 			}
 		}
@@ -5820,6 +5828,24 @@ a.github-fork {
 			}
 		}
 	}
+
+	.files-container {
+		.file-list-container {
+			.files-list {
+				.file {
+					.icons {
+						width: 30%;
+						margin-left: -25px;
+						i {
+							font-size: 16px;
+							margin-right: 10px;
+						}
+					}
+				}
+			}
+		}
+	}
+
 }
 
 @media all and(max-width: 550px) {
@@ -5830,6 +5856,24 @@ a.github-fork {
 			width: 160px !important;
 		}
 	}
+
+	.files-container {
+		.file-list-container {
+			.files-list {
+				.file {
+					.icons {
+						width: 25%;
+						margin-left: 30px;
+						i {
+							font-size: 15px;
+							margin-right: 10px;
+						}
+					}
+				}
+			}
+		}
+	}
+
 }
 
 @media all and(max-width: 500px) {
@@ -5935,7 +5979,7 @@ a.github-fork {
 				.assignment {
 					width: 100%;
 					.meta-data {
-						width: 60%;
+						width: 50%;
 					}
 					.filename,
 					.assignment-name {
